# modular-open-claw

./: .gitignore  Cargo.toml  HANDOVER.md  HEARTBEAT.md  README.md  SAMSARA.md  SOUL.md  config.toml  styles.toml
.agent/skills/: backend-patterns.md  codewiki-vibe-master.md  coding-standards.md  frontend-patterns.md  security-guardrails.md
.agent/workflows/: VIBE_WORKFLOW.md  brainstorm.md  code-review.md  docs-gen.md  god-mode.md  plan.md  red-team.md  reflexion.md  task.md  tdd.md
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
apps/api-server/: Cargo.toml
apps/api-server/src/: main.rs
apps/api-server/static/: index.html
apps/command-center/: package-lock.json  package.json  tailwind.config.js
apps/command-center/src/: App.tsx  index.css
apps/command-center/src-tauri/: Cargo.toml  tauri.conf.json
apps/command-center/src-tauri/src/: lib.rs  main.rs
apps/command-center/src/components/: FactoryLine.tsx  JobDashboard.tsx  KarmaViewer.tsx  RemixLab.tsx  Warehouse.tsx
apps/shorts-factory/: Cargo.toml
apps/shorts-factory/src/: arbiter.rs  asset_manager.rs  job_worker.rs  main.rs  orchestrator.rs  simulator.rs  supervisor.rs
apps/shorts-factory/src/server/: cron.rs  mod.rs  router.rs  telemetry.rs  watchtower.rs
apps/watchtower/: Cargo.toml
apps/watchtower/src/: main.rs
docs/: ARCHITECTURE_LAW.md  CODEWIKI_USAGE_GUIDE.md  CODE_WIKI.md  EVOLUTION_STRATEGY.md  LOCAL_DEV_HANDOVER.md  OPENCLAW_ANALYSIS.md  OPENCLAW_MANUAL.md  OPERATIONS_MANUAL.md  PROGRESS_REPORT.md  PROJECT_EVALUATION.md  SECURITY_DESIGN.md  SKILLS_MANUAL.md  WATCHTOWER_CHAT_SPEC.md  WATCHTOWER_USER_GUIDE.md  api-server.md  core.md  infrastructure.md  shared.md
github/workflows/: update-docs.yml
libs/bastion/: Cargo.toml
libs/bastion/src/: common.rs  fs_guard.rs  guardrails.rs  init.rs  lib.rs  main.rs  net_guard.rs  python_check.rs  scanner.rs  text_guard.rs
libs/bastion/templates/: guardrails_template.rs  secure_requirements.txt
libs/core/: Cargo.toml
libs/core/src/: contracts.rs  error.rs  lib.rs  traits.rs
libs/infrastructure/: Cargo.toml  sqlite::memory:-shm  sqlite::memory:-wal
libs/infrastructure/src/: comfy_bridge.rs  concept_manager.rs  factory_log.rs  job_queue.rs  job_queue_tests.rs  lib.rs  media_forge.rs  oracle.rs  sns_watcher.rs  sound_mixer.rs  trend_sonar.rs  voice_actor.rs  workspace_manager.rs  workspace_manager_tests.rs
libs/shared/: Cargo.toml
libs/shared/src/: cleaner.rs  config.rs  guardrails.rs  health.rs  lib.rs  os_utils.rs  output_validator.rs  sandbox.rs  security.rs  watchtower.rs  zombie_killer.rs
libs/sidecar/: Cargo.toml
libs/sidecar/src/: lib.rs
libs/tuning/: Cargo.toml
libs/tuning/src/: lib.rs  style.rs
resources/voices/: 円明寺鳥居前 2のコピー.m4a
resources/workflows/: shorts_standard_v1.json  tech_news_v1.json
scripts/: com.aiome.core.plist  com.aiome.watchtower.plist  com.shortsfactory.manager.plist  comfy_secure_start.sh  generate_wiki.py
services/qwen3-tts/: requirements.txt  tts_server.py
workspace/config/: skills.md
workspace/dummy_project/: concept.json  metadata.json
workspace/tech_20260220_142505/: concept.json
