[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../../libs/core" }
infrastructure = { path = "../../libs/infrastructure" }
shared = { path = "../../libs/shared" }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
