[package]
name = "shorts-factory"
version = "0.1.0"
edition = "2021"

[dependencies]
factory_core = { path = "../../libs/core", package = "factory-core" }
infrastructure = { path = "../../libs/infrastructure" }
shared = { path = "../../libs/shared" }
rig-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
bastion = { path = "../../libs/bastion", features = ["net", "fs"] }

[dev-dependencies]
tempfile = "3"
