[package]
name = "shorts-factory"
version = "0.1.0"
edition = "2021"

[dependencies]
factory_core = { path = "../../libs/core", package = "factory-core" }
infrastructure = { path = "../../libs/infrastructure" }
shared = { path = "../../libs/shared" }
sidecar = { path = "../../libs/sidecar" }
rig-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3"
bytes = "1.0"
nix = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
tuning = { path = "../../libs/tuning" }
bastion = { path = "../../libs/bastion", features = ["net", "fs"] }

# Phase 8.5: Command Center
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
sysinfo = "0.30"
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio-cron-scheduler = "0.15.1"
rand = "0.10.0"

[dev-dependencies]
tempfile = "3"
