[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
factory_core = { path = "../core", package = "factory-core" }
shared = { path = "../shared" }
sqlx = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = "0.1"
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rig-core = { workspace = true }
schemars = { workspace = true }
bastion = { path = "../bastion", features = ["net", "fs"] }

