[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = "1.10"
tokio = { workspace = true }
reqwest = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }
bastion = { path = "../bastion", features = ["fs", "net"] }
anyhow = { workspace = true }
config = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
